# Quantization-Tauri

./: .gitignore  LICENSE.md  README.md
src/: index.html  main.js  selectController.js  selectStyle.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: deserialization.rs  main.rs  quantization_controller.rs
